--- a/sudoku.css
+++ b/sudoku.css
@@ -2,3 +2,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
+
+hr {
+  width: 500px;
+}
+
+#errors {
+  color: coral;
+}
