--- a/sudoku.css
+++ b/sudoku.css
@@ -10,3 +10,12 @@ hr {
 #errors {
   color: coral;
 }
+
+#board {
+  width: 450px;
+  height: 450px;
+  background-color: yellow;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+}
