css border lines for vert and horz

--- a/sudoku.css
+++ b/sudoku.css
@@ -60,3 +60,11 @@ hr {
 .tile-start{
   background-color: whitesmoke;
 }
+
+.horizontal-line{
+  border-bottom: 1px solid black
+}
+
+.vertical-line {
+  border-right: 1px solid black
+}
